# HardwareGUI

./: .gitignore  .pre-commit-config.yaml  DPIPathConfiguration.sh  QUICKSTART.md  README.md  pyproject.toml  pyrightconfig.json  requirements-gui.txt  requirements.txt  run.sh  setup.sh
.github/workflows/: test.yml
docs/: generate_architecture.py
scripts/: build_resources.sh
src/: config.py  icons_rc.py  logging_config.py  main.py  populate_items.py  setup_cal.py  test.py  test_main.py  ui_main_window.py
src/device_scripts/: __init__.py
src/gui/: action_stacked_widget.py  actions_listview.py  button_factory.py  expanding_sidebar.py  expanding_splitter.py  hiding_listview.py  main_window.py  shared_panels_widget.py  sidebar_button.py  sidebar_tooltip.py  status_bar_service.py  styles.py
src/gui/mixins/: __init__.py  animation_mixin.py
src/gui/scripts/: base_page.py  voltage_unit_cal.py
src/gui/scripts/sampling_unit/: __init__.py  calibration.py  calibration_fit.py  calibration_measure.py  connection.py  hw_setup.py  test.py  verify.py
src/gui/scripts/source_measure_unit/: __init__.py  calibration.py  calibration_fit.py  calibration_measure.py  connection.py  hw_setup.py  test.py  verify.py
src/gui/scripts/voltage_unit/: __init__.py  calibration.py  connection.py  guard.py  hw_setup.py  session_and_coeffs.py  test.py  tests.py
src/gui/services/: __init__.py  shared_panels_service.py  status_bar_service.py  tooltip_service.py
src/gui/utils/: animation.py  artifact_watcher.py  gui_helpers.py  image_viewer.py  widget_factories.py
src/gui/widgets/: __init__.py  action_stacked_widget.py  analysis_plot_widget.py  app_menu_bar.py  expanding_splitter.py  hiding_listview.py  live_plot_widget.py  shared_panels_widget.py  sidebar.py  sidebar_button.py
src/logic/: action_dataclass.py  artifact_manager.py  exceptions.py  hardware_dataclass.py  network_discovery.py  presenter.py  protocols.py  qt_workers.py  simulation.py  vu_service.py
src/logic/calibration/: __init__.py  su_calibration_fit.py  su_calibration_gp_model.py  su_calibration_linear_model.py  su_calibration_measure.py
src/logic/controllers/: __init__.py  base_controller.py  progress_adapter.py  smu_controller.py  su_controller.py  vu_controller.py
src/logic/model/: actions_model.py
src/logic/services/: __init__.py  base_service.py  smu_service.py  su_service.py  vu_service.py
src/resources/: icons.qrc
src/tests/: diag_plot_pipeline.py  verify_ping.py
src/ui/: main_window.ui
tests/: conftest.py  conftest_hardware.py  test_actions_model.py  test_artifact_manager.py  test_gui_helpers.py  test_smu_controller.py  test_smu_service.py  test_su_controller.py  test_su_service.py  test_vu_service.py
tests/bdd/features/: simulation_mode.feature  vu_connection.feature
tests/bdd/step_defs/: conftest.py  test_vu_connection_steps.py
tests/component/: conftest.py
tests/component/pages/: test_base_page.py
tests/component/widgets/: test_live_plot_widget.py
tests/integration/: conftest.py  test_vu_service_integration.py
tests/unit/: conftest.py  test_config.py  test_network_discovery.py  test_operation_result.py  test_qt_workers.py
tests/unit/controllers/: test_vu_controller.py
