[tool.ruff]
line-length = 100

[tool.mypy]
strict = true

[project]
name = "HardwareGUI"
version = "0.0.1"
dependencies = [
    "cython==3.2.0",
    "h5py>=3.15.1",
    "pandas>=2.3.3",
    "plotly>=6.4.0",
    "protobuf>=6.33.0",
    "pydantic>=2.12.4",
    "python-vxi11==0.9",
    "pyusb>=1.3.1",
    "pyyaml>=6.0.3",
    "rich>=14.2.0",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "tqdm>=4.67.1",
    "unit>=0.2.2",
]

[dependency-groups]
dev = [
    "black==25.1.0",
    "click==8.2.1",
    "colorama==0.4.6",
    "jinja2==3.1.6",
    "markupsafe==3.0.2",
    "mypy-extensions==1.1.0",
    "packaging==25.0",
    "pathspec==0.12.1",
    "platformdirs==4.3.8",
    "pyside6==6.9.1",
    "pyside6-addons==6.9.1",
    "pyside6-essentials==6.9.1",
    "qt-material==2.17",
    "ruff==0.12.3",
    "shiboken6==6.9.1",
    "numpy",
    "matplotlib"
]
