[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "D",      # pydocstyle
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
]
ignore = [
    "D100",   # Missing docstring in public module
    "D101",   # Missing docstring in public class
    "D102",   # Missing docstring in public method
    "D103",   # Missing docstring in public function
    "D104",   # Missing docstring in public package
    "D105",   # Missing docstring in magic method
    "D107",   # Missing docstring in __init__
    "D200",   # One-line docstring should fit on one line
    "D205",   # 1 blank line required between summary and description
    "D212",   # Multi-line docstring summary should start at first line
    "D415",   # First line should end with punctuation
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
strict = true

[project]
name = "HardwareGUI"
version = "0.0.1"
requires-python = ">=3.12"
dependencies = [
    "cython==3.2.0",
    "h5py>=3.15.1",
    "pandas>=2.3.3",
    "plotly>=6.4.0",
    "protobuf>=6.33.0",
    "pydantic>=2.12.4",
    "python-vxi11==0.9",
    "pyusb>=1.3.1",
    "pyyaml>=6.0.3",
    "rich>=14.2.0",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "tqdm>=4.67.1",
    "unit>=0.2.2",
]

[dependency-groups]
dev = [
    "black==25.1.0",
    "click==8.2.1",
    "colorama==0.4.6",
    "jinja2==3.1.6",
    "markupsafe==3.0.2",
    "mypy-extensions==1.1.0",
    "packaging==25.0",
    "pathspec==0.12.1",
    "platformdirs==4.3.8",
    "pyside6==6.9.1",
    "pyside6-addons==6.9.1",
    "pyside6-essentials==6.9.1",
    "qt-material==2.17",
    "ruff==0.12.3",
    "shiboken6==6.9.1",
    "numpy",
    "matplotlib",
    "pytest>=8.0",
    "pytest-qt>=4.4",
    "pytest-cov>=4.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
