[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "D",      # pydocstyle
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
]
ignore = [
    "D100",   # Missing docstring in public module
    "D101",   # Missing docstring in public class
    "D102",   # Missing docstring in public method
    "D103",   # Missing docstring in public function
    "D104",   # Missing docstring in public package
    "D105",   # Missing docstring in magic method
    "D107",   # Missing docstring in __init__
    "D200",   # One-line docstring should fit on one line
    "D205",   # 1 blank line required between summary and description
    "D212",   # Multi-line docstring summary should start at first line
    "D415",   # First line should end with punctuation
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff.lint.per-file-ignores]
"src/device_scripts/*" = ["E501", "E741", "F821", "B007", "SIM", "UP"]
"src/icons_rc.py" = ["E501"]
"src/ui_main_window.py" = ["E501", "F"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true
exclude = [
    "src/device_scripts/",
    "src/icons_rc\\.py",
    "src/ui_main_window\\.py",
    "src/tests/",
]

[[tool.mypy.overrides]]
module = ["src.gui.*", "src.logic.presenter"]
check_untyped_defs = false
warn_return_any = false
disable_error_code = [
    "attr-defined",
    "union-attr",
    "assignment",
    "arg-type",
    "call-arg",
    "return-value",
    "var-annotated",
    "override",
]

[[tool.mypy.overrides]]
module = ["src.logic.services.*"]
warn_return_any = false
disable_error_code = [
    "attr-defined",
    "union-attr",
    "arg-type",
]

[tool.uv]
python-preference = "only-managed"

[project]
name = "HardwareGUI"
version = "0.0.1"
requires-python = ">=3.12"
dependencies = [
    "cython==3.2.0",
    "h5py>=3.15.1",
    "pandas>=2.3.3",
    "plotly>=6.4.0",
    "protobuf>=6.33.0",
    "pydantic>=2.12.4",
    "python-vxi11==0.9",
    "pyusb>=1.3.1",
    "pyyaml>=6.0.3",
    "rich>=14.2.0",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "tqdm>=4.67.1",
    "unit>=0.2.2",
]

[dependency-groups]
dev = [
    "black==25.1.0",
    "click==8.2.1",
    "colorama==0.4.6",
    "jinja2==3.1.6",
    "markupsafe==3.0.2",
    "mypy>=1.10",
    "mypy-extensions==1.1.0",
    "pre-commit>=3.7",
    "packaging==25.0",
    "pathspec==0.12.1",
    "platformdirs==4.3.8",
    "pyside6==6.9.1",
    "pyside6-addons==6.9.1",
    "pyside6-essentials==6.9.1",
    "qt-material==2.17",
    "ruff==0.12.3",
    "shiboken6==6.9.1",
    "numpy",
    "matplotlib",
    "pytest>=8.0",
    "pytest-qt>=4.4",
    "pytest-cov>=4.1",
    "pytest-bdd>=7.0",
    "pytest-mock>=3.12",
    "pyright>=1.1.408",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
qt_api = "pyside6"
markers = [
    "unit: Pure unit tests (no Qt event loop)",
    "component: Qt widget/page tests (requires qtbot)",
    "integration: Service+controller integration tests",
    "gui: Full GUI integration tests",
    "bdd: BDD acceptance tests",
    "slow: Tests that take > 5 seconds",
]
filterwarnings = [
    "ignore::DeprecationWarning:PySide6",
    "ignore::DeprecationWarning:shiboken6",
]
addopts = [
    "-ra",
    "--strict-markers",
    "--tb=short",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "src/icons_rc.py",
    "src/ui_main_window.py",
    "src/main.py",
    "src/populate_items.py",
    "src/logic/simulation.py",
    "src/device_scripts/*",
    "src/gui/*",
    "src/logic/presenter.py",
    "src/logic/services/*",
    "src/logic/calibration/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
    "@overload",
    "\\.\\.\\.",
]
